[tool.poetry]
name = "izza"
version = "0.2.0"
description = "my machine learning toolkit"
authors = ["Ismael Lachheb <ismael.lachheb@protonmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"
MiniSom = "^2.2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
